--- a/Sistema/contable/templates/Main/cargo.html
+++ b/Sistema/contable/templates/Main/cargo.html
@@ -13,7 +13,7 @@ Consulta de Puestos
     </div>
     <br>
     <table id="tablaPuesto" class="table">
-        <thead>
+        <thead class="bg-info">
             <th>Cargo</th>
             <th>Area</th>
             <th>Salario</th>
