--- a/Sistema/contable/templates/Base/base.html
+++ b/Sistema/contable/templates/Base/base.html
@@ -46,6 +46,11 @@
             <i class="fas fa-calendar-alt"></i>
             <span>Periodo Contable</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/ingresarCuenta">
+            <i class="fas fa-sort-numeric-up"></i>
+            <span>Ingresar Cuenta</span></a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-user-md"></i>
